force-app/main/default/objects/Marketing_Profile__c/Marketing_Profile__c.object-meta.xml
<CustomObject>
    <label>Marketing Profile</label>
    <nameField>
        <label>Marketing Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>