force-app/main/default/objects/Marketing_Profile__c/fields/Contract_Record__c.field-meta.xml
<CustomField>
    <fullName>Contract_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Record</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Marketing_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>