force-app/main/default/objects/Marketing_Profile__c/fields/D2D__c.field-meta.xml
<CustomField>
    <fullName>D2D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D2D</label>
    <type>Checkbox</type>
</CustomField>