force-app/main/default/objects/Marketing_Profile__c/fields/Email_TMZ_sent_to__c.field-meta.xml
<CustomField>
    <fullName>Email_TMZ_sent_to__c</fullName>
    <label>Email TMZ sent to:</label>
    <type>Email</type>
</CustomField>