force-app/main/default/objects/Marketing_Profile__c/fields/Face_to_Face__c.field-meta.xml
<CustomField>
    <fullName>Face_to_Face__c</fullName>
    <label>Face to Face</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Door to Door</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>In Store Retail</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>