force-app/main/default/objects/Marketing_Profile__c/fields/Lead_Generation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation__c</fullName>
    <label>Lead Generation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>