force-app/main/default/objects/Marketing_Profile__c/fields/Marketing_Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Onboarding_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Onboarding Complete</label>
    <type>Checkbox</type>
</CustomField>