force-app/main/default/objects/Marketing_Profile__c/fields/Marketing_tactic__c.field-meta.xml
<CustomField>
    <fullName>Marketing_tactic__c</fullName>
    <label>Marketing Tactic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
                <label>Social Media Paid/Posts</label>
            </value>
            <value>
                <fullName>Yard Signs / Leave Behinds</fullName>
                <label>Yards Signs</label>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Leads / Referrals</fullName>
            </value>
            <value>
                <fullName>Search Engine</fullName>
                <label>Search Engine PPC</label>
            </value>
            <value>
                <fullName>Direct Mail / Print Ads</fullName>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Paid Digital Ads</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Flyers/Print Ads</fullName>
            </value>
            <value>
                <fullName>Retail/Supermarket</fullName>
            </value>
            <value>
                <fullName>Retail fixed or temporary</fullName>
            </value>
            <value>
                <fullName>Door Hangers</fullName>
            </value>
            <value>
                <fullName>Branded Search</fullName>
                <isActive>false</isActive>
                <label>Branded Search</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>