force-app/main/default/objects/Marketing_Profile__c/fields/Monthly_Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Marketing_Budget__c</fullName>
    <label>Monthly Marketing Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>