force-app/main/default/objects/Marketing_Profile__c/fields/Newspapers_Shoppers_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Newspapers_Shoppers_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newspapers/Shoppers Magazine</label>
    <type>Checkbox</type>
</CustomField>