force-app/main/default/objects/Marketing_Profile__c/fields/Outdoor_signage__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_signage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>yard signs/billboard</inlineHelpText>
    <label>Outdoor signage</label>
    <type>Checkbox</type>
</CustomField>