force-app/main/default/objects/Marketing_Profile__c/fields/Paid_Search_Approved__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Search Approved</label>
    <type>Checkbox</type>
</CustomField>