force-app/main/default/objects/Marketing_Profile__c/fields/Paid_Search_Deactivate_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Deactivate_Date__c</fullName>
    <label>Paid Search  Deactivate Date</label>
    <type>Date</type>
</CustomField>