force-app/main/default/objects/Marketing_Profile__c/fields/Primary_Sales_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Tactic__c</fullName>
    <formula>text(Account_Name__r.Primary_Sales_Tactic__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Sales Tactic</label>
    <type>Text</type>
</CustomField>