force-app/main/default/objects/Marketing_Profile__c/fields/Radio_TV__c.field-meta.xml
<CustomField>
    <fullName>Radio_TV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Radio/TV</label>
    <type>Checkbox</type>
</CustomField>