force-app/main/default/objects/Marketing_Profile__c/fields/Retail_Store__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Store</label>
    <type>Checkbox</type>
</CustomField>