force-app/main/default/objects/Marketing_Profile__c/fields/Secondary_Sales_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Tactic__c</fullName>
    <formula>text( Account_Name__r.Secondary_Sales_Tactic__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Sales Tactic</label>
    <type>Text</type>
</CustomField>