force-app/main/default/objects/Marketing_Profile__c/fields/Social_Media_Approved__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social  Media Approved</label>
    <type>Checkbox</type>
</CustomField>