force-app/main/default/objects/Marketing_Profile__c/fields/Social_Media_Deactivate_Date__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Deactivate_Date__c</fullName>
    <label>Social Media Deactivate Date</label>
    <type>Date</type>
</CustomField>