force-app/main/default/objects/Marketing_Profile__c/fields/Social_Media_Page__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Page__c</fullName>
    <label>Social Media Page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>