force-app/main/default/objects/Marketing_Profile__c/fields/TMZ_login_Date__c.field-meta.xml
<CustomField>
    <fullName>TMZ_login_Date__c</fullName>
    <label>TMZ login Date</label>
    <type>Date</type>
</CustomField>