force-app/main/default/objects/Marketing_Profile__c/fields/TMZ_logins__c.field-meta.xml
<CustomField>
    <fullName>TMZ_logins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMZ logins</label>
    <type>Checkbox</type>
</CustomField>