force-app/main/default/objects/Marketing_Profile__c/fields/Website_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Website_Approval_Date__c</fullName>
    <label>Website Approval Date</label>
    <type>Date</type>
</CustomField>