force-app/main/default/objects/Marketing_Profile__c/fields/Website_Approved__c.field-meta.xml
<CustomField>
    <fullName>Website_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website Approved</label>
    <type>Checkbox</type>
</CustomField>