force-app/main/default/objects/Marketing_Profile__c/fields/Website_Deactivate_Date__c.field-meta.xml
<CustomField>
    <fullName>Website_Deactivate_Date__c</fullName>
    <label>Website Deactivate Date</label>
    <type>Date</type>
</CustomField>