force-app/main/default/objects/Marketing_Profile__c/fields/X90_day_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X90_day_follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>90 day follow up</label>
    <type>Checkbox</type>
</CustomField>